<resources>
    <string name="app_name">KidsApp</string>
    <string name="learn_alphabets_with_ahmed">Learn alphabets with Ahmed</string>
    <string name="lessons">Lessons</string>
    <string name="exam">Exam</string>
    <string name="repository_link">Repository Link</string>
    <string name="image_to_show_for_alphabet">Image to show for alphabet.</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="textview">TextView</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="g">G</string>
    <string name="alphabetA">Apple</string>
    <string name="alphabetB">Ball</string>
    <string name="alphabetC">Cat</string>
    <string name="alphabetD">Dog</string>
    <string name="alphabetE">Elephant</string>
    <string name="alphabetF">Flower</string>
    <string name="alphabetG">Goat</string>
    <string name="alphabetH">Horse</string>
    <string name="alphabetI">Igloo</string>
    <string name="k">K</string>
    <string name="j">J</string>
    <string name="l">L</string>
    <string name="o">O</string>
    <string name="s">S</string>
    <string name="v">V</string>
    <string name="q">Q</string>
    <string name="x">X</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="z">Z</string>
    <string name="p">P</string>
    <string name="n">N</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="alphabetJ">Jellyfish</string>
    <string name="alphabetK">Kangaroo</string>
    <string name="alphabetL">Lion</string>
    <string name="alphabetM">Monkey</string>
    <string name="alphabetN">Nest</string>
    <string name="alphabetO">Ostrich</string>
    <string name="alphabetP">Pen</string>
    <string name="alphabetQ">Quail</string>
    <string name="alphabetR">Rabbit</string>
    <string name="alphabetS">Sheep</string>
    <string name="alphabetT">Turtle</string>
    <string name="alphabetU">Umbrella</string>
    <string name="alphabetX">Xylophone</string>
    <string name="alphabetY">Yak</string>
    <string name="alphabetZ">Zebra</string>
    <string name="alphabetV">Vulture</string>
    <string name="alphabetW">Whale</string>
    <string name="description">Description</string>
    <string name="button">Button</string>
    <string name="choose_the_correct_option">Choose the correct option!</string>
    <string name="exam_image">Exam image</string>
    <string name="custom_lessons">Custom Lessons</string>
</resources>