<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LessonShow">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lessons"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="401dp"
        android:layout_height="435dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/buttonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="36dp"
                android:onClick="openImage"
                android:text="@string/a"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:onClick="openImage"
                android:text="@string/b"
                app:layout_constraintEnd_toStartOf="@+id/buttonC"
                app:layout_constraintStart_toEndOf="@+id/buttonA"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/h"
                app:layout_constraintEnd_toStartOf="@+id/buttonI"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toEndOf="@+id/buttonG"
                app:layout_constraintTop_toBottomOf="@+id/buttonE" />

            <Button
                android:id="@+id/buttonO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:onClick="openImage"
                android:text="@string/o"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonL" />

            <Button
                android:id="@+id/buttonU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:onClick="openImage"
                android:text="@string/u"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonR" />

            <Button
                android:id="@+id/buttonS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/s"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonP" />

            <Button
                android:id="@+id/buttonX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:onClick="openImage"
                android:text="@string/x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonU" />

            <Button
                android:id="@+id/buttonV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/v"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonS" />

            <Button
                android:id="@+id/buttonQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/q"
                app:layout_constraintEnd_toStartOf="@+id/buttonR"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toEndOf="@+id/buttonP"
                app:layout_constraintTop_toBottomOf="@+id/buttonN" />

            <Button
                android:id="@+id/buttonT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/t"
                app:layout_constraintEnd_toStartOf="@+id/buttonU"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toEndOf="@+id/buttonS"
                app:layout_constraintTop_toBottomOf="@+id/buttonQ" />

            <Button
                android:id="@+id/buttonR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:onClick="openImage"
                android:text="@string/r"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonO" />

            <Button
                android:id="@+id/buttonP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/p"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonM" />

            <Button
                android:id="@+id/buttonZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/z"
                app:layout_constraintStart_toEndOf="@+id/buttonY"
                app:layout_constraintTop_toBottomOf="@+id/buttonW" />

            <Button
                android:id="@+id/buttonK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/k"
                app:layout_constraintEnd_toStartOf="@+id/buttonL"
                app:layout_constraintStart_toEndOf="@+id/buttonJ"
                app:layout_constraintTop_toBottomOf="@+id/buttonH" />

            <Button
                android:id="@+id/buttonY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/y"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonV" />

            <Button
                android:id="@+id/buttonJ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/j"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonG" />

            <Button
                android:id="@+id/buttonN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/n"
                app:layout_constraintEnd_toStartOf="@+id/buttonO"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toEndOf="@+id/buttonM"
                app:layout_constraintTop_toBottomOf="@+id/buttonK" />

            <Button
                android:id="@+id/buttonM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonJ" />

            <Button
                android:id="@+id/buttonG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/g"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonD" />

            <Button
                android:id="@+id/buttonI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:onClick="openImage"
                android:text="@string/i"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonF" />

            <Button
                android:id="@+id/buttonL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:onClick="openImage"
                android:text="@string/l"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonI" />

            <Button
                android:id="@+id/buttonF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:onClick="openImage"
                android:text="@string/f"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonC" />

            <Button
                android:id="@+id/buttonE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="36dp"
                android:onClick="openImage"
                android:text="@string/e"
                app:layout_constraintEnd_toStartOf="@+id/buttonF"
                app:layout_constraintStart_toEndOf="@+id/buttonD"
                app:layout_constraintTop_toBottomOf="@+id/buttonB" />

            <Button
                android:id="@+id/buttonD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/d"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonA" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="32dp"
                android:onClick="openImage"
                android:text="@string/c"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:onClick="openImage"
                android:text="@string/w"
                app:layout_constraintEnd_toStartOf="@+id/buttonX"
                app:layout_constraintHorizontal_bias="0.309"
                app:layout_constraintStart_toEndOf="@+id/buttonV"
                app:layout_constraintTop_toBottomOf="@+id/buttonT" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>